--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-TOKEN = NTUwNTA3MTU2ODY1MDI0MDE2.XurOvA.F48ODUabfwQSta4f0FnQDjUf_Ms
+TOKEN = NTUwNTA3MTU2ODY1MDI0MDE2.XuwykA.qp7QVe5pMqg4wVmnulu89aI281o
+
 
